--- a/MyChat/MyChat/ChattingServer/App.config
+++ b/MyChat/MyChat/ChattingServer/App.config
@@ -7,8 +7,8 @@
     <system.serviceModel>
         <services>
             <service name="ChattingServer.ChattingService">
-                <endpoint address="net.tcp://localhost:9000/ChattingService"
-                    binding="netTcpBinding" bindingConfiguration="" name="ChattingServiceEndPoint"
+                <endpoint address="net.tcp://192.168.1.126:9000/ChattingService"
+                    binding="netTcpBinding"  bindingConfiguration="" name="ChattingServiceEndPoint"
                     contract="ChatingInterfaces.IChattingService" />
             </service>
         </services>
