--- a/MyChat/MyChat/MyChat/App.config
+++ b/MyChat/MyChat/MyChat/App.config
@@ -6,7 +6,7 @@
   <!--config klienta-->
     <system.serviceModel>
         <client>
-            <endpoint address="net.tcp://localhost:9000/ChattingService"
+            <endpoint address="net.tcp://192.168.1.126:9000/ChattingService"
                 binding="netTcpBinding" bindingConfiguration="" contract="ChatingInterfaces.IChattingService"
                 name="ChattingServiceEndPoint" kind="" endpointConfiguration="" />
         </client>
